# try-quarto-live

./: README.md  justfile  pyproject.toml
notebooks/: _quarto.yml  demo1.ipynb  demo1.ipynb.OFF  demo1.qmd  index.qmd  sine.ipynb.OFF  sine.qmd.OFF
notebooks/_site/: about.html  demo1.html  index.html  listings.json  search.json
